--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+.BattlefieldCombat {
   font-family: sans-serif;
   text-align: center;
   padding: 20px 20px 20px 0;  /* Remove left padding */
